unpackaged/main/default/objects/Application__c/fields/Type_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Applicant__c</fullName>
    <description>Who is this application for? Used in flow.</description>
    <label>Type of Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Someone else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>