unpackaged/main/default/objects/Application__c/fields/Type_of_Income_Verification_Provided__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Income_Verification_Provided__c</fullName>
    <description>Select the Type of Incomes that Patient Needs to be Provided during the Application Verification.</description>
    <label>Type Of Income Verification Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income_Tax_Return</fullName>
                <label>Income Tax Return</label>
            </value>
            <value>
                <fullName>Pay_Stub</fullName>
                <label>Pay Stub</label>
            </value>
            <value>
                <fullName>Unemployment_Check</fullName>
                <label>Unemployment Check</label>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>SSD</fullName>
            </value>
            <value>
                <fullName>Public_Assistance_Benefit_Notification</fullName>
                <label>Public Assistance Benefit Notification</label>
            </value>
            <value>
                <fullName>Benefit Notification</fullName>
                <isActive>false</isActive>
                <label>Benefit Notification</label>
            </value>
            <value>
                <fullName>Letter of Support</fullName>
                <isActive>false</isActive>
                <label>Letter of Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>