unpackaged/main/default/objects/Application__c/fields/Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insurance__c</fullName>
    <description>Select type of insurance that patient have.</description>
    <inlineHelpText>Select your Insurance Type from the list provided.</inlineHelpText>
    <label>Type of Insurance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private_Insurance</fullName>
                <label>Private Insurance</label>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Emergency_Medicaid</fullName>
                <label>Emergency Medicaid</label>
            </value>
            <value>
                <fullName>Charity_Care</fullName>
                <label>Charity Care</label>
            </value>
            <value>
                <fullName>VA_Program</fullName>
                <label>VA Program</label>
            </value>
            <value>
                <fullName>Public_Health_Insurance</fullName>
                <label>Public Health Insurance</label>
            </value>
            <value>
                <fullName>Medicare_and_Supp</fullName>
                <label>Medicare and Supp</label>
            </value>
            <value>
                <fullName>Medicare_Pending</fullName>
                <label>Medicare Pending</label>
            </value>
            <value>
                <fullName>Medicare_Plus_Medigap</fullName>
                <label>Medicare Plus Medigap</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>