unpackaged/main/default/objects/Application__c/fields/Unemployment_Check__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unemployment Check</label>
    <type>Checkbox</type>
</CustomField>