unpackaged/main/default/objects/Application__c/fields/X30_Days_After_Payment__c.field-meta.xml
<CustomField>
    <fullName>X30_Days_After_Payment__c</fullName>
    <description>Sets itself to true when the Application is 30 days out from the Payment Date</description>
    <formula>IF(
  ( Payment_Date__c + 30 ) = TODAY(),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>30 Days After Payment?</label>
    <type>Checkbox</type>
</CustomField>