unpackaged/main/default/objects/Application__c/recordTypes/Patient_Navigation.recordType-meta.xml
<RecordType>
    <fullName>Patient_Navigation</fullName>
    <active>true</active>
    <label>Patient Navigation</label>
</RecordType>