unpackaged/main/default/objects/Application__c/recordTypes/Treatment_Assistance_Program.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Assistance_Program</fullName>
    <active>true</active>
    <label>Treatment Assistance Program</label>
</RecordType>