unpackaged/main/default/objects/Application__c/recordTypes/XPOC.recordType-meta.xml
<RecordType>
    <fullName>XPOC</fullName>
    <active>false</active>
    <description>A test record type for Blair&apos;s POC</description>
    <label>XPOC</label>
</RecordType>