unpackaged/main/default/objects/Application__c/validationRules/Breast_Cancer_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Breast_Cancer_Type_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>
        AND(
            RecordType.DeveloperName = &quot;Treatment_Assistance_Program&quot;,
            ISPICKVAL(
                Breast_cancer_type__c ,
                &apos;Other (please specify)&apos;
            ),
            ISBLANK( Other_Breast_Cancer_Type__c ),
            !$Setup.Bypass__c.Validation__c,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot;,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;application__c&quot;
        )
    </errorConditionFormula>
    <errorDisplayField>Other_Breast_Cancer_Type__c</errorDisplayField>
    <errorMessage>Please Specify Values</errorMessage>
</ValidationRule>