unpackaged/main/default/objects/Application__c/validationRules/Care_Program_on_Application_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Care_Program_on_Application_Approval</fullName>
    <active>true</active>
    <description>On Application approval, Care Program should be mandatory.</description>
    <errorConditionFormula>OR( AND(
NOT(
ISBLANK(Care_Program__c)
),
NOT(ISPICKVAL(Care_Program__r.Status,&apos;Active&apos;))
), 
AND( ISPICKVAL(Application_Status__c, &apos;Approved&apos;) , 
ISBLANK( Care_Program__c )
)
)</errorConditionFormula>
    <errorMessage>Care Program is not selected or selected Care Program is not Active</errorMessage>
</ValidationRule>