unpackaged/main/default/objects/Application__c/validationRules/Madatory_fields_on_Electronic_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Madatory_fields_on_Electronic_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Method_of_Payment_Distribution__c , &quot;Electronic Check&quot;) , 
  OR(ISBLANK(  Bank_Name__c ), ISBLANK( Account_Number__c ),
  ISBLANK( Routing_Number__c ),
  ISBLANK( Name_on_Account__c ),
  ISBLANK( TEXT ( Account_Type__c )))
  
   )</errorConditionFormula>
    <errorDisplayField>Method_of_Payment_Distribution__c</errorDisplayField>
    <errorMessage>Fill the Mandatory fields -Bank Name,Account Number,Account Type, Routing Number,Name on Account</errorMessage>
</ValidationRule>