unpackaged/main/default/objects/Application__c/validationRules/New_Application_must_have_status_as_New.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Application_must_have_status_as_New</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Application_Status__c , &apos;New&apos;))
)</errorConditionFormula>
    <errorMessage>Application Status must be New</errorMessage>
</ValidationRule>