unpackaged/main/default/objects/Application__c/validationRules/Other_Treatments_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Treatments_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( INCLUDES(Treatment_s_received_in_the_past_12_mon__c, &quot;Other&quot;) ,ISBLANK(Other_Treatments_Received__c))&amp;&amp; (!$Setup.Bypass__c.Validation__c ||(LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot; &amp;&amp; LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;application__c&quot;))</errorConditionFormula>
    <errorDisplayField>Other_Treatments_Received__c</errorDisplayField>
    <errorMessage>Please Specify Other Treatments Received In Past 12 Months</errorMessage>
</ValidationRule>