unpackaged/main/default/objects/Application__c/validationRules/Patient_Navigation_Management_Edit_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Patient_Navigation_Management_Edit_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>
        AND(
            $Permission.Patient_Navigation_Management,
            ISCHANGED( Application_Status__c ),
             RecordType.DeveloperName  &lt;&gt;  &apos;Patient_Navigation&apos;,
            !$Setup.Bypass__c.Validation__c,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot;,
            LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;application__c&quot;
        )
    </errorConditionFormula>
    <errorMessage>Patient Navigator Managers can only edit Patient Navigation Applications.</errorMessage>
</ValidationRule>