unpackaged/main/default/objects/Application__c/validationRules/Payable_field_should_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Payable_field_should_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( Method_of_Payment_Distribution__c , &quot;Postal Mail&quot;) , ISBLANK( Payable_To__c ) 
)</errorConditionFormula>
    <errorDisplayField>Payable_To__c</errorDisplayField>
    <errorMessage>Enter payable to information.</errorMessage>
</ValidationRule>