unpackaged/main/default/objects/Application__c/validationRules/Relationship_to_Patientothers_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Relationship_to_Patientothers_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Relationship_to_Patient__c,&apos;Other (Please Specify)&apos;),
ISBLANK( Other_Relationship_to_Patient__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Relationship_to_Patient__c</errorDisplayField>
    <errorMessage>Please Specify Relationship with Patient</errorMessage>
</ValidationRule>