unpackaged/main/default/objects/Application__c/validationRules/Routing_Number_should_9_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Routing_Number_should_9_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Routing_Number__c )),
LEN(Routing_Number__c)   &lt;&gt;   9
)</errorConditionFormula>
    <errorDisplayField>Routing_Number__c</errorDisplayField>
    <errorMessage>Routing Number should be 9 Digits.</errorMessage>
</ValidationRule>