unpackaged/main/default/objects/Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <roleAndSubordinatesInternal>System_Administrator</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>TAP_Mission</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>TAP_Program_Owner</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>