unpackaged/main/default/objects/Application__c/listViews/Applications_that_Need_Evaluation.listView-meta.xml
<ListView>
    <fullName>Applications_that_Need_Evaluation</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Application_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>contains</operation>
        <value>New,In Review,Deferred</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.Treatment_Assistance_Program</value>
    </filters>
    <label>TAP Applications that Need Review</label>
</ListView>