unpackaged/main/default/objects/Application__c/listViews/Applications_that_Need_More_Information.listView-meta.xml
<ListView>
    <fullName>Applications_that_Need_More_Information</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Application_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Need More Information</value>
    </filters>
    <label>Applications that Need More Information</label>
    <sharedTo>
        <role>System_Administrator</role>
        <roleAndSubordinatesInternal>TAP_Mission</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>TAP_Program_Owner</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>