unpackaged/main/default/objects/Application__c/listViews/Approved_Applications.listView-meta.xml
<ListView>
    <fullName>Approved_Applications</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Application_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Approval_Rejected_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Applications</label>
</ListView>