unpackaged/main/default/objects/Application__c/listViews/My_Applications.listView-meta.xml
<ListView>
    <fullName>My_Applications</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Application_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Applications</label>
</ListView>