unpackaged/main/default/objects/Application__c/listViews/Patient_Navigation_Applications.listView-meta.xml
<ListView>
    <fullName>Patient_Navigation_Applications</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Application_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.Patient_Navigation</value>
    </filters>
    <label>Patient Navigation Applications</label>
    <sharedTo>
        <roleAndSubordinatesInternal>System_Administrator</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>TAP_Mission</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>TAP_Program_Owner</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>