unpackaged/main/default/objects/Application__c/listViews/TAP_Applications.listView-meta.xml
<ListView>
    <fullName>TAP_Applications</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Application_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Application__c.Treatment_Assistance_Program</value>
    </filters>
    <label>TAP Applications</label>
</ListView>